# stable-solver-uu

./: CMakeLists.txt  README.md  README.txt  StableSolver.cpp  StableSolver.h  Visualizer.cpp  Visualizer.h  main.cpp
wrapper/: imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h
